TS-8 basic crud for listings (#13)
* TS-8 basic crud for listings

* TS-8 basic crud for listings
